BT-1 updated the header

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <script src="https://maps.googleapis.com/maps/api/js"></script>
   </head>
   <body>
-    <div class="container"></div>
+    <div class="container">
+      <row>Something new</row>
+    </div>
   </body>
   <script src="/bundle.js"></script>
 </html>
