BT-1 something new2

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <div class="container">
       <row>Something new</row>
+      <row>Something new2</row>
     </div>
   </body>
   <script src="/bundle.js"></script>
